{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 536,
  "lineage": "acce6784-1ba7-e849-a086-27c28c5c890b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eks-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0877191ad2bad6c02",
            "association_id": "eipassoc-07aba8b844038c103",
            "domain": "vpc",
            "id": "eipalloc-0877191ad2bad6c02",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03ddf5b2200e09882",
            "private_dns": "ip-10-0-16-139.ec2.internal",
            "private_ip": "10.0.16.139",
            "public_dns": "ec2-35-170-210-233.compute-1.amazonaws.com",
            "public_ip": "35.170.210.233",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "aws_internet_gateway.eks-gw",
            "module.vpc.aws_internet_gateway.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126110902809:internet-gateway/igw-076085a4e7af7b7d2",
            "id": "igw-076085a4e7af7b7d2",
            "owner_id": "126110902809",
            "tags": {
              "Environment": "test"
            },
            "tags_all": {
              "Environment": "test"
            },
            "vpc_id": "vpc-0bb041b188e0b3943"
          },
          "dependencies": [
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_route.private_ipv6_egress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "eks-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0877191ad2bad6c02",
            "connectivity_type": "public",
            "id": "nat-09f3f26c9c524ade9",
            "network_interface_id": "eni-03ddf5b2200e09882",
            "private_ip": "10.0.16.139",
            "public_ip": "35.170.210.233",
            "subnet_id": "subnet-061398c41431df338",
            "tags": {
              "Environment": "test"
            },
            "tags_all": {
              "Environment": "test"
            }
          },
          "dependencies": [
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_vpc.this",
            "aws_eip.eks-eip",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "aws_subnet.eks-public",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "aws_internet_gateway.eks-gw",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_subnet.redshift"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "eks-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-076085a4e7af7b7d2",
            "id": "r-rtb-09ef7a4d9ffb05c201080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09ef7a4d9ffb05c20",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_vpc.this",
            "aws_internet_gateway.eks-gw",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route_table_association.database",
            "aws_route_table.eks-route",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.aws_route_table_association.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126110902809:route-table/rtb-09ef7a4d9ffb05c20",
            "id": "rtb-09ef7a4d9ffb05c20",
            "owner_id": "126110902809",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "test"
            },
            "tags_all": {
              "Environment": "test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb041b188e0b3943"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043464976607abc61",
            "route_table_id": "rtb-09ef7a4d9ffb05c20",
            "subnet_id": "subnet-061398c41431df338"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "aws_route_table.eks-route",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "aws_subnet.eks-public",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_route_table_association.outpost"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126110902809:subnet/subnet-061398c41431df338",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.16.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061398c41431df338",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "126110902809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "vpc_id": "vpc-0bb041b188e0b3943"
          },
          "dependencies": [
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_internet_gateway.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126110902809:subnet/subnet-0dd0904fd6674b353",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.64.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd0904fd6674b353",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "126110902809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "vpc_id": "vpc-0bb041b188e0b3943"
          },
          "dependencies": [
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126110902809:vpc/vpc-0bb041b188e0b3943",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08f486eed80eb1d96",
            "default_route_table_id": "rtb-0111280f1805c788c",
            "default_security_group_id": "sg-06ad3e69753984c18",
            "dhcp_options_id": "dopt-06e80c6669fb169fd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0bb041b188e0b3943",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0111280f1805c788c",
            "owner_id": "126110902809",
            "tags": {
              "Environment": "test",
              "Name": "eks-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "eks-vpc",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126110902809:security-group/sg-09887911f2f739b4a",
            "description": "Security group for web-server with HTTP ports open within VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09887911f2f739b4a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/24"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Ingress Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "web-server-20230320060403085200000001",
            "name_prefix": "web-server-",
            "owner_id": "126110902809",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-server"
            },
            "tags_all": {
              "Name": "web-server"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0bb041b188e0b3943"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-3495093864",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09887911f2f739b4a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.web_server_sg.module.sg.aws_security_group.this",
            "module.web_server_sg.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/24"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-1574078250",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09887911f2f739b4a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_server_sg.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "module.web_server_sg.module.sg.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Ingress Rule",
            "from_port": 0,
            "id": "sgrule-3054966965",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09887911f2f739b4a",
            "self": true,
            "source_security_group_id": "sg-09887911f2f739b4a",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.web_server_sg.module.sg.aws_security_group.this",
            "module.web_server_sg.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}